--- a/lesson 3/hyperlink.html
+++ b/lesson 3/hyperlink.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>introduction</title>
+        <title>hyperlink</title>
     </head>
     <body>
-     this content will be displayed on the website   
+        <h1>hyperlink</h1>
+
+        <p>lets go to <a href="https://www.youtube.com/">youtube</a></p>
+        
     </body>
 </html>
