--- a/lesson 1/introduction.html
+++ b/lesson 1/introduction.html
@@ -7,6 +7,9 @@
     </head>
     <body>
      my name is nalule christine ssuubi. <br>
-     i am in grade 10   
+     i am in grade 10. <br>
+     i study from trinity college nabbingo. <br>
+     i am 17 years old. <br>
+     my hobby is swimming. <br>   
     </body>
 </html>
