--- a/lesson 2/my introduction.html
+++ b/lesson 2/my introduction.html
@@ -5,7 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>my introduction</title>
     </head>
+    <h1>my introduction</h1>
     <body>
+     <i>my name is nalule christine ssuubi</i> <br>
+     <b>i study from trinity college nabbingo</b> <br>
+     <mark>my hobby is swimming</mark> <br>
+     <del>i am 17 years old</del> <br>
+     <em>i am i grade 10</em>    
+        
+
         
     </body>
 </html>
