--- a/lesson 3/list.html
+++ b/lesson 3/list.html
@@ -15,6 +15,20 @@
         </ol>
 
         <h1>unordered list</h1>
+
+        <ul>
+            <li>home</li>
+            <li>about us</li>
+            <li>contact us</li>
+        </ul>
+
+        <h1>description list</h1>
+
+        <dl>
+            <dt>home</dt> 
+            <dt>about us</dt>
+            <dt>contact us</dt>
+        </dl>
         
     </body>
 </html>
