--- a/lesson 4/audio and video.html
+++ b/lesson 4/audio and video.html
@@ -10,6 +10,12 @@
             <source src="sound-1.mp3" type="audio/mpeg">
             your browser does not support the audio tag
         </audio>
-        
+
+        <br><br>
+
+        <video controls autoplay width="400" height="300">
+            <source src="video-1.mp4" type="video/mp4">
+            your browser does not support the video tag
+        </video>
     </body>
 </html>
