--- a/lesson 9/text decoration.html
+++ b/lesson 9/text decoration.html
@@ -21,6 +21,25 @@
                 text-transform: uppercase;
                 text-decoration: line-through;
             }
+
+            #div3{
+                text-transform: capitalize;
+                text-decoration: double;
+            }
+            #p1{
+                text-transform: initial;
+                text-decoration: overline;
+            }
+
+            #p2{
+                text-transform: uppercase;
+                text-decoration: solid;
+            }
+
+            #p3{
+                text-transform: lowercase;
+                text-decoration: underline overline;
+            }
         </style>
     </head>
     <body>
