--- a/lesson 16/lesson 16 homework.html
+++ b/lesson 16/lesson 16 homework.html
@@ -7,7 +7,16 @@
 
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     </head>
-    <body>
-        
+    <body style="text-align: start;">
+        <div class="jumbotron jumbotron-fluid>
+            <div class="container">
+                <h1 style="color: rgb(251, 255, 0);">my skill</h1>
+                <ul>
+                    <li>swimming</li>
+                    <li>playing chess</li>
+                    <li>cooking</li>
+                    <li>graphic design</li>
+                </ul>
+            </div>
     </body>
 </html>
