--- a/lesson 17/lesson 17 homework.html
+++ b/lesson 17/lesson 17 homework.html
@@ -46,6 +46,42 @@
             </ul>
 
             <hr>
+
+            <h2>pagination</h2>
+
+            <p>
+                trying to create pagination using bootstrap
+            </p>
+
+            <ul class="pagination">
+                <li class="page-item">
+                    <a href="#" class="page-link">&#171</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">1</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">2</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">3</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">4</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">5</a>
+                </li>
+
+                <li class="page-item">
+                    <a href="#" class="page-link">&#187</a>
+                </li>
+            </ul>
         </div>  
     </body>
 </html>
