--- a/lesson 18/lesson 18 homework.html
+++ b/lesson 18/lesson 18 homework.html
@@ -6,11 +6,11 @@
     <title>lesson 18 homework</title>
 
     <!--importing bootstrap css-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!--importing bootstrap javascript-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/js/jquery.min.js"></script>
 </head>
 <div class="container">
     <h1>my skills and hobbies</h1>
