--- a/lesson 19/lesson 19 home work.html
+++ b/lesson 19/lesson 19 home work.html
@@ -19,9 +19,13 @@
             var snum = 2;
             var sum = fnum+snum;
             var sub = fnum-snum;
+            var multiplication =fnum*snum;
+            var division =fnum/snum;
 
             document.getElementById("addition").innerHTML = "the total sum= "+sum;
             document.getElementById("subtraction").innerHTML = "the subtraction= "+sub;
+            document.getElementById("multiplication").innerHTML = "the multiplication= "+multiplication;
+            document.getElementById("division").innerHTML = "the division= "+division;
         </script>
     </body>
 </html>
